<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string-array name="daysOfWeek">
        <item>Sunday</item>
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
    </string-array>
</resources>
