<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
                  android:title="@string/settings"
                  android:summary="Set preferred journeys">
    <kanemars.chuffme.AutoCompletePreference
            android:defaultValue="@string/default_source_station"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="Source station"
            android:inputType="textCapCharacters"
            android:maxLines="1"
            android:key="source"
            android:summary="@string/source"
        android:id="@+id/source"
    />
    <kanemars.chuffme.AutoCompletePreference
            android:defaultValue="@string/default_destination_station"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="Destination station"
            android:inputType="textCapCharacters"
            android:maxLines="1"
            android:key="destination"
            android:summary="@string/destination"
        android:id="@+id/destination"
    />
    <kanemars.chuffme.TimePreference
            android:key="notification_time"
            android:title="Daily notification time"
        android:id="@+id/notificationTime"/>
            />
    <kanemars.chuffme.MultiSelectListPreferenceWithSummary
            android:title="Days of week to be notified"
               android:key="DaysOfWeek"
               android:summary="%s"
               android:entries="@array/daysOfWeek"
               android:entryValues="@array/daysOfWeekValues"
               android:defaultValue="@array/daysOfWeekDefaults"
        android:id="@+id/daysOfWeek"/>
    <SwitchPreference
            android:defaultValue="false"
            android:title="Show daily notifications"
            android:key="notification_preference"
            android:id="@+id/notificationPreference"/>


</PreferenceScreen>